tests/ui/nll/user-annotations/pattern_substs_on_brace_struct.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_brace_struct.rs:5:28
   |
LL |     let foo = Foo { field: &y };
   |                            ^^ borrowed value does not live long enough
LL |
LL |     let Foo::<'static> { field: _z } = foo;
   |         ---------------------------- type annotation requires that `y` is borrowed for `'static`
LL | }
   | - `y` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_brace_struct.rs:12:28
   |
LL |     let foo = Foo { field: &y };
   |                            ^^ borrowed value does not live long enough
...
LL |         Foo::<'static> { field: _z } => {
   |         ---------------------------- type annotation requires that `y` is borrowed for `'static`
...
LL | }
   | - `y` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
